--- a/code/404.html
+++ b/code/404.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title> C369 Lesson 12</title>
-    </head>
-    <body>
-        <p> Error 404 ! </p>
-    </body>
-
+<head>
+    <title>C369 Lesson 12</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8d7da;
+            color: #721c24;
+            text-align: center;
+            padding: 50px;
+        }
+        p {
+            font-size: 24px;
+            font-weight: bold;
+        }
+    </style>
+</head>
+<body>
+    <p>Error 404: Page Not Found</p>
+</body>
 </html>
